# flowIndex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: demo.tape
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: LAUNCH.md  PYPI.md  SHOW_HN.md  cli.md  concepts.md  demo-output.txt  examples.md  index.md  mcp.md
examples/python_fastapi_app/: main.py
examples/python_fastapi_app/services/: ledger.py  payments.py  refunds.py
examples/python_fastapi_app/tests/: test_payments.py
examples/ts_express_app/: server.js
examples/ts_express_app/routes/: payments.js  refunds.js
examples/ts_express_app/services/: events.js  ledger.js  payments.js  refunds.js
examples/ts_express_app/tests/: payments.test.js
flowindex/: __init__.py  cli.py  config.py  schemas.py
flowindex/db/: __init__.py  models.py  session.py
flowindex/frameworks/: django.py  express.py  fastapi.py  flask.py  nextjs.py
flowindex/indexer/: __init__.py  context_pack.py  entrypoints.py  explain.py  git_history.py  graph.py  impact.py  overview.py  pipeline.py  scanner.py  symbols.py  tests.py
flowindex/mcp/: __init__.py  server.py  tools.py
flowindex/parsers/: __init__.py  base.py  python_parser.py  ts_parser.py
flowindex/render/: markdown.py  tables.py
scripts/: demo.tape  record-demo.sh  run-demo.sh
tests/: conftest.py  test_cli.py  test_context_pack.py  test_entrypoints.py  test_git_history.py  test_impact.py  test_python_parser.py  test_ts_parser.py
