[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowindex"
version = "0.1.0"
description = "Behavior-first repository indexing for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aditi Chatterji" }]
keywords = ["ai", "agents", "code-analysis", "developer-tools", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "sqlmodel>=0.0.22",
    "pydantic>=2.6",
    "gitpython>=3.1",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/adu3110/flowIndex"
Repository = "https://github.com/adu3110/flowIndex"
Documentation = "https://github.com/adu3110/flowIndex/tree/main/docs"
Issues = "https://github.com/adu3110/flowIndex/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-toml>=0.10",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
flowindex = "flowindex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["flowindex"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["flowindex"]

[[tool.mypy.overrides]]
module = "flowindex.mcp.*"
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
